--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@next/mdx": "^16.0.5",
+    "@next/mdx": "^16.1.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -25,7 +25,7 @@
     "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.1.0",
     "next-intl": "^4.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -42,7 +42,7 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.181.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^16.1.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
